--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <div class="container">
     <h1>Number Guessing Game</h1>
     <form class="form">
-        <label for="guessField" id="guess">Guess a number</label>
-        <input type="text" id="guessField" class="guessField">
+        <label for="guessField" id="guess">Guess a number</label><br>
+        <input type="text" id="guessField" class="guessField"><br>
         <input type="submit" id="subt" value="Submit guess" class="guessSubmit">
     </form>
     <div class="resultParas">
